@@ -1,3 +1,9 @@
+2006-10-23  Richard Dale  <rdale@foton.es>
+
+	* When a QMetaObject was constructed, the parent was wrongly being
+	  set to the superclass of the superclass, rather than just the
+	  superclass
+
 2006-10-22  Arno Rehn  <arno@arnorehn.de>
 
 	* Currect return value for QyotoSmokeBinding::callMethod() where
